# NIST-Suite

./: Cargo.toml  README.md
src/: binary_matrix_rank.rs  constants.rs  cumulative_sums.rs  customtypes.rs  dft_spectral.rs  frequency_block.rs  frequency_monobit.rs  logger.rs  longest_run.rs  main.rs  non_overlapping_template.rs  overlapping_template.rs  runs.rs  test_helper.rs  tests.rs  utils.rs
src/testdata/: data.sqrt3  random_bit_string  random_hex_bytes
src/tests/: binary_matrix_rank_tests.rs  cumulative_sums_tests.rs  dft_spectral_tests.rs  frequency_block_tests.rs  frequency_monobit_tests.rs  longest_run_tests.rs  non_overlapping_template_tests.rs  runs_tests.rs  test_helper.rs  utils_tests.rs
src/tests/testdata/: data.pi  data.sha3  data.sqrt2  random_invalid_char
