[package]
name = "rust_nist_suite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
env_logger = "0.11.2"
log = "0.4.20"
nalgebra = "0.32.4"
statrs = "0.16.0"

[dev-dependencies]
serial_test = "3.0.0"
