[package]
name = "rust_nist_suite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
env_logger = "0.11.2"
hex = "0.4.3"
log = "0.4.20"
nalgebra = "0.32.4"
rug = "1.24.0"
rustfft = "6.2.0"
statrs = "0.16.0"
